# monitoramento

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  INSTALL_CHECKLIST.md  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  example_robot.py  install-docker-compose.sh  install.sh  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_multiple_robots.py  start.bat  start.sh  stop.bat  stop.sh  tailwind.config.ts
agent/: Dockerfile  main.py  requirements.txt
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: auth.py  database.py  main.py  metrics.py  models.py  redis_service.py  schemas.py  telegram_service.py  websocket.py
backend/app/routers/: auth.py  executions.py  robots.py  telegram_bots.py  websocket.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/charts/: ExecutionsChart.tsx  StatusChart.tsx
client/src/components/layout/: Header.tsx  Sidebar.tsx
client/src/components/logs/: LiveLogs.tsx
client/src/components/modals/: AddRobotModal.tsx
client/src/components/robots/: RobotCard.tsx
client/src/lib/: websocket.ts
client/src/pages/: Dashboard.tsx  Executions.tsx  Login.tsx  Robots.tsx  Settings.tsx  TelegramBots.tsx
client/src/store/: useAppStore.ts
dashboards/: infra-monitoring.json  rpa-logs.json  rpa-overview.json
docs/: postman_collection.json
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  ExecutionList.jsx  Header.jsx  JobForm.jsx  Layout.jsx  Login.jsx  RobotForm.jsx
frontend/src/pages/: Dashboard.jsx  Execucoes.jsx  Executions.jsx  Jobs.jsx  Login.jsx  Monitoramento.jsx  Robos.jsx  Robots.jsx
frontend/src/services/: AuthContext.jsx  api.js  auth.js
infra/docker/: docker-compose.yml
infra/docker/grafana/provisioning/dashboards/: dashboards.yml
infra/docker/grafana/provisioning/datasources/: datasources.yml
infra/docker/loki/: loki-config.yml
infra/docker/nginx/: frontend.conf  nginx.conf
infra/docker/prometheus/: prometheus.yml
infra/docker/promtail/: promtail-config.yml
monitoring/: apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  telegram_bot.py  urls.py  views.py
monitoring/management/: __init__.py
monitoring/management/commands/: test_telegram.py
monitoring/migrations/: 0001_initial.py
nginx/: Dockerfile  nginx.conf
observabilidade/: loki-config.yml  prometheus.yml  promtail-config.yml
observabilidade/grafana/dashboards/: rpa_logs.json  rpa_overview.json
observabilidade/grafana/provisioning/dashboards/: dashboard.yml
observabilidade/grafana/provisioning/datasources/: datasource.yml
robot_monitor/: asgi.py  settings.py  urls.py  wsgi.py
robots/rpa_demo/: Dockerfile  requirements.txt  rpa_demo.py
server/: .env.example  Dockerfile  auth.ts  entrypoint.sh  index.ts  metrics.ts  requirements.txt  routes.ts  storage.ts  telegram.ts  websocket.ts
server/app/: entrypoint.sh  manage.py
server/app/api/: auth.py  metrics.py  serializers.py  tasks.py  urls.py  views.py  viewsets.py
server/app/app/: celery.py  urls.py  wsgi.py
server/app/app/settings/: base.py  dev.py  prod.py
server/app/config/: settings.py  urls.py
server/app/core/: admin.py  apps.py  models.py  permissions.py  serializers.py
shared/: schema.ts
static/css/: dashboard.css
static/js/: dashboard.js
templates/monitoring/: dashboard.html
