[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.1",
    "alembic==1.12.1",
    "celery==5.3.4",
    "fastapi==0.104.1",
    "gunicorn==21.2.0",
    "httpx==0.25.2",
    "passlib[bcrypt]==1.7.4",
    "prometheus-client==0.19.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "python-telegram-bot==20.7",
    "redis==5.0.1",
    "sqlalchemy==2.0.23",
    "structlog==23.2.0",
    "tenacity==8.2.3",
    "uvicorn[standard]==0.24.0",
    "websockets==12.0",
]
